--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.6"
   }
